changed css filter overflow to hidden for x, added js to fix initial open accordion click

--- a/source/themes/custom/gearwrench_au/styles/libraries/view/media-pages.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/view/media-pages.scss
@@ -161,7 +161,7 @@
         box-shadow: 0 0 3rem 5rem rgba(0, 0, 0, 0.6);
         bottom: 0;
         left: 15vw;
-        overflow: scroll;
+        overflow: hidden scroll;
         padding-top: 75px;
         padding-left: 1rem;
         position: fixed;
